# WebcamControl

./: .gitignore  Makefile  README.md  mejoras.md  presets.json  pyproject.toml  requirements.txt  webcam_control.py
tests/: conftest.py  test_app.py  test_presets.py
